# anatomy-lookup

./: .gitignore  README.md  pyproject.toml  setup.py
anatomy_lookup/: __init__.py  services.py
anatomy_lookup/resources/: data_log.json
anatomy_lookup/resources/release/release-2023-01-23T230336Z-sckan/data/: ard-arm-cardiac.ttl  bolser-lewis.ttl  bronchomotor.ttl  emapa-reasoned.ttl  keast-bladder.ttl  methods-reasoned.ttl  npo-reasoned.ttl  pancreas.ttl  prov-record.ttl  sawg-distal-colon.ttl  sawg-stomach.ttl  sparc-methods-reasoned.ttl  spleen.ttl  uberon-reasoned.ttl  wbrcm.ttl
scripts/: create_index.py  search.py
